Fix the footer overlapping on main section + On small screens , footer was overlapping over main element making it unusable for users

--- a/src/Components/Footer/footer.module.sass
+++ b/src/Components/Footer/footer.module.sass
@@ -3,7 +3,6 @@
     margin-top: 5px
     border-top: 3px solid black
     text-align: center
-    bottom: 0
     width: 100vw
     position: relative
     display: flex
