--- a/src/Components/Main/Item/item.module.sass
+++ b/src/Components/Main/Item/item.module.sass
@@ -4,11 +4,11 @@
     align-items: center
     font-family: Arial, Helvetica, sans-serif
     gap: 50px
-    height: 100vh
     margin-top: 40px
 
 .main > h2
     font-size: 40px
+    max-width: 700px
 
 .main > h3
     font-size: 35px
