--- a/src/Components/Main/Shopping/shop.sass
+++ b/src/Components/Main/Shopping/shop.sass
@@ -3,6 +3,7 @@ main
     grid-template-columns: repeat(auto-fill , 300px)
     gap: 10px
     margin: 10px
+    justify-content: center
 
 .item
     padding: 10px
