--- a/src/assets/styles/main.sass
+++ b/src/assets/styles/main.sass
@@ -9,6 +9,9 @@
 #root
     height: 100vh
     width: 100vw
+
+main
+    min-height: 100vh
 a
     text-decoration: underline
     color: black
